--- a/.original/bootstrap-treeview-1.2.0/bower.json
+++ b/.original/bootstrap-treeview-1.2.0/bower.json
@@ -27,7 +27,7 @@
   ],
   "dependencies": {
     "jquery": ">= 1.9.0",
-    "bootstrap": ">= 3.0.0"
+    "bootstrap": "3.3.7"
   },
   "devDependencies": {}
 }
